The icon and the title of the application were corrected.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
     <a href="https://www.creative-tim.com" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+            <img src="../../../assets/img/coffee.png"/>
         </div>
-        Creative Tim
+        <strong class="think">Think-</strong><strong class="coffee">Coffee</strong>
     </a>
 </div>
 <div class="sidebar-wrapper">
