The structure of the project was fixed.

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,9 @@
 <div class="logo">
-    <a href="https://www.creative-tim.com" class="simple-text">
+    <a href="" class="simple-text">
         <div class="logo-img">
             <img src="../../../assets/img/coffee.png"/>
         </div>
+        <h3></h3>
         <strong class="think">Think-</strong><strong class="coffee">Coffee</strong>
     </a>
 </div>
