--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,9 @@
 <div class="main-content">
     <div class="container-fluid">
         <h1>Home works!</h1>
+       <table mat-table>
+         
+       </table>
+                          
     </div>
 </div>
