Products form was added.

--- a/src/app/views/products/add-product/add-product.component.html
+++ b/src/app/views/products/add-product/add-product.component.html
@@ -7,23 +7,43 @@
                         <h2 class="text-center"><strong>Nuevo producto</strong></h2>
                     </div>
                     <div class="card-body">
+                        <br>
                         <div class="table-responsive">
                             <form class="example-form">
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Favorite food">
-                                </mat-form-field>
-                              
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Favorite food">
-                                </mat-form-field>
-
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Favorite food">
-                                </mat-form-field>
-                                
-                                <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Favorite food">
-                                </mat-form-field>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <mat-form-field class="example-full-width">
+                                          <input matInput placeholder="Nombre">
+                                        </mat-form-field>
+                                        <mat-form-field class="example-full-width">
+                                            <input matInput placeholder="Precio">
+                                        </mat-form-field>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <mat-form-field>
+                                                    <mat-select placeholder="Favorite food">
+                                                        <mat-option>aadsasdasd</mat-option>
+                                                        <mat-option>aadsasdasd</mat-option>
+                                                        <mat-option>aadsasdasd</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-md-6">
+                                                    <mat-form-field>
+                                                        <mat-select placeholder="Favorite food">
+                                                            <mat-option>aadsasdasd</mat-option>
+                                                            <mat-option>aadsasdasd</mat-option>
+                                                            <mat-option>aadsasdasd</mat-option>
+                                                        </mat-select>
+                                                    </mat-form-field>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                            <img mat-card-image src="../../../../assets/img/angular2-logo.png" class="rounded mx-auto d-block">    
+                                            <button mat-flat-button class="btn btn-primary btn-lg btn-block"> Buscar archivo</button>
+                                    </div>
+                                </div>
                             </form>
                         </div>
                     </div>
